--- a/devlog/_posts/2024-11-08-배열에_관하여.md
+++ b/devlog/_posts/2024-11-08-배열에_관하여.md
@@ -58,6 +58,8 @@ nodeList는 배열과 유사한 개체이지 자바스크립트 배열이 아닙
 ## 개인적인 느낌
 
 <img src="/assets/img/blog/241108.jpg">
+nodelist와 Array 비교
+{:.figcaption}
 해당 문제를 해결하면서 nodeList는 배열이 아니라는 것을 알게 되었습니다.<br />
 console.log로 보면 앞에 글자가 붙은거 말고는 형식이 배열과 같아서 착각하게 되네요.
 
