--- a/study/_posts/2024-11-18-모두의연구소_프론트엔드_후기.md
+++ b/study/_posts/2024-11-18-모두의연구소_프론트엔드_후기.md
@@ -24,7 +24,7 @@ categories: [devlog]
 1. **실시간 라이브 수업**<br>
 앞에 적었던 것처럼 수업은 100% 라이브로 진행된다. 궁금한 점이나 이해가 잘 되지 않는 부분은 바로 디스코드 채팅을 보내면 바로 대답을 해주신다!<br>
 다른 부트텐트 후기보면서 걱정이 되었던게 멘토가 많이 있지만 대부분 경력이 짧고 답을 안해준다는 글을 많이 봤었는데 여기는 답변이 바로바로 온다는 점이 젤 좋았다.
-수업 중간에 실습 또한 학생들이 
+수업 중간에 실습도 있고 그거에 대한 해설도 해주니까 오프라인에서 수업 듣는 것 같은 느낌을 받는다.
 
 2. **과제 피드백**<br>
 매주 금요일마다 1시간 피드백 시간이 있는데 모든 학생들의 과제를 다 확인하시고 피드백을 준다.<br>
