--- a/study/_posts/2024-11-18-모두의연구소_프론트엔드_후기.md
+++ b/study/_posts/2024-11-18-모두의연구소_프론트엔드_후기.md
@@ -13,9 +13,9 @@ categories: [devlog]
 
 퇴사 후 프론트엔드 개발자로 전향하고 싶어서 수업과정을 찾던 중 오름캠프를 발견 하게 되었다.
 여길 고른 이유는 일단 `실시간 라이브 수업`라는 점이 제일 컸던거 같다.
-부트텐트 리스트를 봤는데 녹화본으로 진행하는 곳이 많아서 끌리지 않았다.
-그 영상들이 최신인지 확인 할 방법이 없고 녹화본으로 볼 꺼면 그냥 유튜브 무료강의 찾아보는게 낫지 않나.. 라는 생각도 들었다.
-그리고 `THREE.js`가 교육과정에 있는데 포트폴리오 작업 때 차별화를 둘 수 있다는 생각이 들어 지원하게 되었다.
+부트텐트 리스트를 봤는데 인강으로 진행하는 곳이 많아서 끌리지 않았다.
+저 영상이 몇년전꺼 일지도 모르고 개발공부가 스스로 탐색해가면서 학습을 하는 것이라고 하지만 그냥 인강으로 하는 것은 마음에 들지 않았다. 
+여기는 `THREE.js`가 교육과정에 있는데 포트폴리오 작업 때 차별화를 둘 수 있다는 생각이 들어 지원하게 되었다.
 
 <hr>
 
@@ -23,8 +23,8 @@ categories: [devlog]
 
 1. **실시간 라이브 수업**<br>
 앞에 적었던 것처럼 수업은 100% 라이브로 진행된다. 궁금한 점이나 이해가 잘 되지 않는 부분은 바로 디스코드 채팅을 보내면 바로 대답을 해주신다!<br>
-다른 부트텐트 후기보면서 걱정이 되었던게 멘토가 많이 있지만 대부분 경력이 짧고 답을 안해준다는 글을 많이 봤었는데 여기는 답변이 바로바로 온다는 점이 젤 좋았다.
-수업 중간에 실습도 있고 그거에 대한 해설도 해주니까 오프라인에서 수업 듣는 것 같은 느낌을 받는다.
+다른 부트텐트 후기보면서 걱정이 되었던게 멘토가 많이 있지만 대부분 경력이 짧고 답을 안해준다는 글을 많이 봤었는데 여기는 강사님들의 답변이 바로바로 온다는 점이 젤 좋았다.
+수업 중간에 실습도 있고 그거에 대한 해설도 해주니까 오프라인에서 수업 듣는 것 같은 느낌을 받았다.
 
 2. **과제 피드백**<br>
 매주 금요일마다 1시간 피드백 시간이 있는데 모든 학생들의 과제를 다 확인하시고 피드백을 준다.<br>
