카테고리 수정

--- a/study/_posts/2024-11-18-모두의연구소_프론트엔드_후기.md
+++ b/study/_posts/2024-11-18-모두의연구소_프론트엔드_후기.md
@@ -3,7 +3,7 @@ layout: post
 title: 오름캠프 - 프론트엔드 3기 중간 수강 후기
 sitemap: false
 tags: [모두의연구소, 오름캠프, 오름캠프프론트엔드, 원밀리언라인즈코딩, 프론트엔드, 프론트엔드개발자과정]
-categories: [devlog]
+categories: [study]
 ---
 
 1. this ordered seed list will be replaced by the toc
