--- a/study/_posts/2024-11-28-texs.md
+++ b/study/_posts/2024-11-28-texs.md
@@ -10,7 +10,7 @@ categories: [study]
 {:toc}
 
 MongoDB 공부하던 중 문득 생각이 들었다<br>
-"이걸 깃헙에 올리게 되면 연결해둔 db주소에 들어간 비밀번호가 노출되지 않을까?"
+"이걸 깃헙에 올리게 되면 연결해둔 db주소에 들어간 비밀번호가 노출되지 않을까?"<br>
 그래서 방법을 찾던 중 env 파일이라는 것을 알게 되었고 어떻게 쓰는지 정리한 글
 {:.note}
 
